apps/uptime-kuma/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  selector: { app: uptime-kuma }
  ports:
  - name: http
    port: 80
    targetPort: 3001
