apps/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: traefik
  tls:
  - hosts: [ "uptime.downhill.dozzly.network" ]
    secretName: uptime-kuma-tls
  rules:
  - host: uptime.downhill.dozzly.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: { name: uptime-kuma, port: { number: 80 } }
